--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section id="main">
     <ul></ul>
     <button>
-      <img src="assets/img/plus.svg" width="40" height="40" />
-      </svg>
+      <img src="assets/img/plus.svg" alt="" width="40" height="40">
     </button>
     <div class='prompt add-task-prompt'>
       <h3>Tambahkan Task</h3>
-      <input type='text' />
+      <input type='text'>
       <div class='buttons-container'>
         <button id='cancel'>Batal</button>
         <button id='add'>Tambahkan</button>
